[gd_scene load_steps=11 format=3 uid="uid://bhvuehmqknj6f"]

[ext_resource type="Script" path="res://interface/finishLevel/finish_level.gd" id="1_5y5fc"]
[ext_resource type="Texture2D" uid="uid://vu2nxfed2lpl" path="res://interface/finishLevel/conjunto_jujuba.png" id="1_v00kj"]
[ext_resource type="FontFile" uid="uid://dn85xow4aphek" path="res://fonts/RevMiniPixel.ttf" id="2_tdvyj"]
[ext_resource type="AudioStream" uid="uid://dm2xxg6qs0ncu" path="res://songs/bg_menu.mp3" id="4_v3sal"]

[sub_resource type="Animation" id="Animation_hdqeu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ahssj"]
resource_name = "collect_0"
length = 2.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_tykck"]
resource_name = "collect_1"
length = 2.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2, 2.5),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_i2xfe"]
resource_name = "collect_2"
length = 3.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_mtcpj"]
resource_name = "collect_3"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBoxContainer/Texture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(2, 2.5, 3, 3.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6jccl"]
_data = {
"RESET": SubResource("Animation_hdqeu"),
"collect_0": SubResource("Animation_ahssj"),
"collect_1": SubResource("Animation_tykck"),
"collect_2": SubResource("Animation_i2xfe"),
"collect_3": SubResource("Animation_mtcpj")
}

[node name="FinishLevel" type="Control" node_paths=PackedStringArray("_animation")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5y5fc")
_animation = NodePath("Animation")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Texture" type="Sprite2D" parent="VBoxContainer"]
texture = ExtResource("1_v00kj")
vframes = 4

[node name="ButtonNext" type="Button" parent="."]
layout_mode = 0
offset_left = 608.0
offset_top = 406.0
offset_right = 726.0
offset_bottom = 437.0
theme_override_fonts/font = ExtResource("2_tdvyj")
text = "Próximo Level"

[node name="ButtonRestart" type="Button" parent="."]
layout_mode = 0
offset_left = 334.0
offset_top = 406.0
offset_right = 473.0
offset_bottom = 437.0
theme_override_fonts/font = ExtResource("2_tdvyj")
theme_override_font_sizes/font_size = 16
text = "Recomeçar Level"

[node name="ButtonQuit" type="Button" parent="."]
layout_mode = 0
offset_left = 79.0
offset_top = 406.0
offset_right = 218.0
offset_bottom = 437.0
theme_override_fonts/font = ExtResource("2_tdvyj")
theme_override_font_sizes/font_size = 16
text = "Sair do Jogo"

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6jccl")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_v3sal")
volume_db = -15.0
autoplay = true

[connection signal="pressed" from="ButtonNext" to="." method="_on_button_next_pressed"]
[connection signal="pressed" from="ButtonRestart" to="." method="_on_button_restart_pressed"]
[connection signal="pressed" from="ButtonQuit" to="." method="_on_button_quit_pressed"]
